# s3uploader

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  s3uploader.pyproj  s3uploader.sln
src/s3uploader/: __main__.py  s3uploader.py
test/: test_s3upload.py
test/systemtest/: output_path.txt
